# cpp-ray-tracer

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  output.ppm  test_render.ppm
include/: camera.h  hittable.h  hittable_list.h  material.h  ray.h  sphere.h  vec3.h
src/: camera.cpp  main.cpp  material.cpp  random.cpp  ray.cpp  sphere.cpp  vec3.cpp
